@@ -8,10 +8,12 @@ v0.9.2 (WIP):
         Deleting node queue connected links for deletion.
 
     BUGFIX: Examples: Simplify and fix drawing of node header line (#180)
-    
+
     BUGFIX: Editor: Cleanup tabs.
-    
+
     BUGFIX: Editor: Use ImGuiKey directly with ImGui r18822 (#183)
+
+    BUGFIX: Examples: Use ImGuiKey directly with ImGui r18822 (#183)
 
 
 v0.9.1 (2022-08-27):
